# formalize

./: .gitignore  Dockerfile  README.md  align.sh  grpo.sh  install_cuda.sh  job.yaml  pod.yaml  pyproject.toml  run.sh  run_align.py  run_align.sh  run_axolotl.sh  run_em.sh  run_herald.py  run_herald.sh  run_pipeline.sh  run_verify.py  run_verify.sh  serve.sh  test.sh  test.yaml  verifier-pod.yaml
.github/workflows/: docker-image.yml
axolotl_configs/: full_herald_iter3_positives.yaml  full_herald_iter4_positives.yaml  full_herald_iter5_positives.yaml  kimina_informalize.yaml  lora_herald_iter0.yaml  lora_herald_iter0_positives.yaml  lora_herald_iter1.yaml  lora_herald_iter1_positives.yaml  lora_herald_iter2.yaml  lora_herald_iter2_positives.yaml  lora_herald_iter3_positives.yaml  train_herald.yaml
jobs/: align_llama3b_instruct.yaml  align_llama8b_instruct_lora.yaml  align_qwen3b_instruct.yaml  align_qwen7b_instruct_lora.yaml  grpo_herald.yaml  grpo_qwen3b_instruct.yaml  herald_em.yaml  herald_inference.yaml  herald_verify.yaml  informalization.yaml  llama3b_instruct.yaml  llama8b_instruct_lora.yaml  qwen3b_instruct.yaml  qwen7b_instruct_lora.yaml  run_herald.yaml
scripts/: create_misalign.py  format_forml4.py  herald_format_data.py  run_align.py  run_herald.py  run_herald.sh
src/formalize/: __init__.py  align.py  custom_grpo_trainer.py  datasets.py  grpo.py  mathatlas.py  predict.py
