[project]
name = "formalize"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "datasets>=3.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "transformers>=4.48.2",
    "openai>=1.61.1",
    "trl>=0.14.0",
    "peft>=0.14.0",
    "vllm>=0.7.2",
    "bitsnbytes>=1.0.0",
    "more-itertools>=10.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.rye.scripts]
grpo = { cmd = "python src/formalize/grpo.py" }
align = { cmd = "python src/formalize/align.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/formalize"]


[tool.black]
line-length = 120
